# SolidEngine

./: .gitignore  CMakeLists.txt  Pipeline Production.md  README.md  Roadmap.md  imgui.ini
EditorAssets/: Pause.png.SImage  Play.png.SImage  Stop.png.SImage
Game/BossRush/: Features.md  ProjectSettings.SolidProject
Game/BossRush/Assets/: Anim.SMaterial  Anim.SolidScene  AnimDemo.SolidScene  AnimScene.SolidScene  AnimShader.SVertFrag  AnimationMat.SMaterial  ArmatureBoss.SMaterial  Boss1.SolidScene  Boss_Scene.SolidScene  Bullet.SolidPrefab  BulletParticle.SolidPrefab  BulletSA1.SolidPrefab  COLORShader.SVertFrag  ComputeCube.SMaterial  CubeBullet.SolidPrefab  CubeMat.SMaterial  DefaultShader.SVertFrag  FixedLightShader.SVertFrag  GatherLaserEffect.SolidPrefab  GatheringSolidParticle.SolidPrefab  GroundMat.SMaterial  GuiScene.SolidScene  M_Tech.SMaterial  MatBoss1.SMaterial  MatPlayer1.SMaterial  MegalosArmatureMat1.SMaterial  MegalosArmatureMat2.SMaterial  MegalosKyvos.SolidPrefab  MegalosNoyauMat.SMaterial  MegalosScene.SolidScene  Megalos_Kyvos.SolidPrefab  MultiPillar.SolidPrefab  New GameObject.SolidPrefab  PBRShader.SVertFrag  Panel.SMaterial  Player.SolidPrefab  PlayerBulletMat.SMaterial  PlayerMat.SMaterial  Prisme.SolidPrefab  PrismeBackPackMat.SMaterial  (+23 more)
Game/BossRush/Code/: .gitignore  CMakeLists.txt  main.cpp
Include/: engine.hpp
My_Solid_Proj/: ProjectSettings.SolidProject
My_Solid_Proj/Assets/: Instantiate.SolidScene
My_Solid_Proj/Assets/Materials/: InnPBR.SMaterial
My_Solid_Proj/Assets/Meshes/: fantasy_game_inn.obj.SMesh
My_Solid_Proj/Assets/Prefabs/: Blue Light.SolidPrefab
My_Solid_Proj/Assets/Scenes/: Inn.SolidScene
My_Solid_Proj/Assets/Shaders/: DefaultShader.SVertFrag
My_Solid_Proj/Assets/Textures/: TextureShader.SVertFrag
My_Solid_Proj/Code/: CMakeLists.txt  main.cpp
My_Solid_Proj/Code/Dlls/: RefurekuSettings.toml  SolidEngine.lib  vcvars.bat
My_Solid_Proj/Code/Dlls/Debug/: PhysXTask_staticd.lib
My_Solid_Proj/Code/Dlls/Release/: PhysXTask_static.lib
My_Solid_Proj/Code/Include/: GameManager.hpp  entry.hpp
My_Solid_Proj/Code/Include/EngineGenerated/: GameManager.sld.hpp  entry.sld.hpp
My_Solid_Proj/Code/Src/: EntryPoint.cpp  GameManager.cpp
My_Solid_Proj/EngineInclude/: ImGuiFileBrowser.h
My_Solid_Proj/EngineInclude/Core/: engine.hpp  taskManager.hpp
My_Solid_Proj/EngineInclude/ECS/: componentArray.hpp  componentManager.hpp  ecsManager.hpp  entityManager.hpp  system.hpp  systemManager.hpp
My_Solid_Proj/EngineInclude/EngineGenerated/: animation.sld.hpp  animator.sld.hpp  audioSource.sld.hpp  boxCollider.sld.hpp  camera.sld.hpp  capsuleCollider.sld.hpp  light.sld.hpp  meshRenderer.sld.hpp  particleEffect.sld.hpp  quaternion.sld.hpp  rigidBody.sld.hpp  script.sld.hpp  scriptList.sld.hpp  sphereCollider.sld.hpp  std_wrapper.sld.hpp  string.sld.hpp  transform.sld.hpp  types.sld.hpp  vector2.sld.hpp  vector3.sld.hpp  vector4.sld.hpp
My_Solid_Proj/EngineInclude/Resources/: graphicalResourceMgr.hpp  ressources.hpp
My_Solid_Proj/EngineInclude/Time/: time.hpp
My_Solid_Proj/EngineInclude/UI/: solidUI.hpp
My_Solid_Proj/EngineInclude/glad/: glad.h
Resources/: AnimMat.SMaterial  AnimScene.SolidScene  COLORShader.SVertFrag  DefaultShader.SVertFrag  FixedLightShader.SVertFrag  MasterSword.obj.SMesh  PBRShader.SVertFrag  TextureShader.SVertFrag  ZShader.SVertFrag  capsule.obj.SMesh  cube.obj.SMesh  customScript.hpp  fantasy_game_inn.obj.SMesh  icon.rc  solid.obj.SMesh  sphere.obj.SMesh  towerWNorms.obj.SMesh
Resources/AnimShader/: main.frag  main.vert
Resources/DefaultShader/: main.frag  main.vert
Resources/FixedLightShader/: main.frag
Resources/PBRShader/: main.frag  main.vert
Resources/TextureShader/: main.frag
Resources/ZShader/: main.frag  main.vert
SolidEditor/Include/: editor.hpp
SolidEditor/Include/GameCompiler/: GameCompiler.hpp  ameCompiler.hpp  gameCompiler.hpp
SolidEditor/Include/Inputs/: editorInputs.hpp
SolidEditor/Include/UI/: buttonInterface.hpp  editorInterface.hpp  filesInterface.hpp  hierarchyTreeInterface.hpp  inspectorInterface.hpp  logsInterface.hpp  playInterface.hpp  sceneInterface.hpp
SolidEditor/Src/: editor.cpp  main.cpp
SolidEditor/Src/GameCompiler/: GameCompiler.cpp  ameCompiler.cpp  gameCompiler.cpp
SolidEditor/Src/Inputs/: editorInputs.cpp
SolidEditor/Src/UI/: buttonInterface.cpp  editorInterface.cpp  filesInterface.cpp  hierarchyTreeInterface.cpp  inspectorInterface.cpp  logsInterface.cpp  playInterface.cpp  sceneInterface.cpp
SolidEngine/Include/: Ressources.hpp  SolidMath.hpp  engine.hpp
SolidEngine/Include/Audio/: audio.hpp
SolidEngine/Include/Core/: SolidMultiThread.hpp  Task.hpp  TaskManager.hpp  TaskSystem.hpp  ThreadManager.hpp  debug.hpp  engine.hpp  olidMultiThread.hpp  solidMultiThread.hpp  std_wrapper.hpp  systemCmd.hpp  task.hpp  taskManager.hpp  threadManager.hpp
SolidEngine/Include/ECS/: component.hpp  componentArray.hpp  componentManager.hpp  ecsManager.hpp  entity.hpp  entityManager.hpp  sceneGraphManager.hpp  system.hpp  systemManager.hpp  types.hpp
SolidEngine/Include/EngineGenerated/: EntityMacros.h  camera.sld.hpp  meshRenderer.sld.hpp  quaternion.sld.hpp  rigidBody.sld.hpp  script.sld.hpp  transform.sld.hpp  vector2.sld.hpp  vector3.sld.hpp  vector4.sld.hpp
SolidEngine/Include/GameCompiler/: gameCompiler.hpp
SolidEngine/Include/InputManager/: inputManager.hpp
SolidEngine/Include/Physics/: physics.hpp  physicsEventCallback.hpp
SolidEngine/Include/Rendering/: framebuffer.hpp  renderer.hpp
SolidEngine/Include/Resources/: audioManager.hpp  audioOutput.hpp  audioSource.hpp  graphicalResource.hpp  graphicalResourceInterface.hpp  graphicalResourceMgr.hpp  resourceLoader.hpp  resourceMgr.hpp  resourceType.hpp  ressources.hpp
SolidEngine/Include/Ressources/: ResourceLoader.hpp  (+10 more)
SolidEngine/Src/: Ressources.cpp  engine.cpp  sceneGraphManager.cpp
SolidLauncher/Include/: launcher.hpp
SolidLauncher/Src/: launcher.cpp  main.cpp
Src/: engine.cpp  main.cpp
TestMaths/: TestMaths.cpp  TestMaths.vcxproj  TestMaths.vcxproj.filters
(+252 files in other folders)
